--- a/src/scss/eyes-on-the-price.scss
+++ b/src/scss/eyes-on-the-price.scss
@@ -1,3 +1,58 @@
-h1 {
-  background-color: red;
+// Ball
+$follow-ball--background: #8bc34a;
+$follow-ball--size: 40px;
+// Squares
+$follow-ball--square--background-color: $follow-ball--background;
+
+
+body,
+section {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+.ball {
+  background-color: $follow-ball--background;
+  border-radius: 50%;
+  display: block;
+  height: $follow-ball--size;
+  pointer-events: none;
+  position: absolute;
+  transition: left .0s linear, top .0s linear;
+  width: $follow-ball--size;
+}
+
+.follow-ball {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  position: relative;
+  width: 100vw;
+
+  &__wrapper {
+    display: grid;
+    grid-template-rows: 200px 200px 200px;
+    grid-template-columns: 200px 200px 200px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__container {
+    padding: 10%;
+  }
+
+  &__square {
+    display: inline-block;
+    background-color: $follow-ball--square--background-color;
+    min-height: 100%;
+    text-align: center;
+    vertical-align: middle;
+    width: 100%;
+
+    &--no-follow {
+      visibility: hidden;
+    }
+  }
 }
