--- a/src/scss/eyes-on-the-price.scss
+++ b/src/scss/eyes-on-the-price.scss
@@ -11,14 +11,30 @@ section {
   font-family: "Roboto", sans-serif;
 }
 
+.informative {
+  right: 5%;
+  top: 2.5%;
+  position: fixed;
+  z-index: 2;
+
+  &__coordinate {
+    margin: 15px 0 0;
+    line-height: 1;
+  }
+}
+
 .ball {
+  --ball-left-position: 50%;
+  --ball-top-position: 50%;
+
   background-color: $follow-ball--background;
   border-radius: 50%;
   display: block;
+  left: var(--ball-left-position);
   height: $follow-ball--size;
   pointer-events: none;
+  top: var(--ball-top-position);
   position: absolute;
-  transition: left .0s linear, top .0s linear;
   width: $follow-ball--size;
 }
 
@@ -30,17 +46,39 @@ section {
   position: relative;
   width: 100vw;
 
+  &--show-cartisian {
+
+    &:before,
+    &:after {
+      background-color: red;
+      content: "";
+      position: absolute;
+    }
+
+    &:before {
+      width: 100%;
+      height: 1px;
+    }
+
+    &:after {
+      width: 1px;
+      height: 100%;
+    }
+  }
+
   &__wrapper {
     display: grid;
-    grid-template-rows: 200px 200px 200px;
-    grid-template-columns: 200px 200px 200px;
+    grid-gap: 100px;
+    grid-template-rows: repeat(3, 150px);
+    grid-template-columns: repeat(3, 150px);
     list-style: none;
     margin: 0;
     padding: 0;
   }
 
   &__container {
-    padding: 10%;
+    perspective: 1000px;
+    perspective-origin: center;
   }
 
   &__square {
