--- a/src/templates/eyes-on-the-price.pug
+++ b/src/templates/eyes-on-the-price.pug
@@ -4,16 +4,22 @@ block variables
 doctype html
 html(lang="en" dir="ltr")
 
-	include ./includes/head.pug
+  include ./includes/head.pug
 
-	head
-		+head(DATA)
+  head
+    +head(DATA)
 
-	body
-		section.follow-ball
-			- let n = 0;
-			span.ball
-			ul.follow-ball__wrapper
-				while n < 9
-					li.follow-ball__container
-						span(class=Math.floor(9 / 2) === n ? "follow-ball__square--no-follow" : "follow-ball__square")= n++
+  body
+    div.informative
+      p.informative__coordinate.informative__coordinate--x= 'Coordinate X: '
+        span
+      p.informative__coordinate.informative__coordinate--y= 'Coordinate Y: '
+        span
+
+    section.follow-ball.follow-ball--show-cartisian
+      - let n = 0;
+      span.ball
+      ul.follow-ball__wrapper
+        while n < 9
+          li.follow-ball__container
+            span(class=Math.floor(9 / 2) === n ? "follow-ball__square--no-follow" : "follow-ball__square")= n++
