--- a/src/scss/eyes-on-the-price.scss
+++ b/src/scss/eyes-on-the-price.scss
@@ -1,8 +1,8 @@
 // Ball
-$follow-ball--background: #8bc34a;
+$follow-ball--background: #536d38;
 $follow-ball--size: 40px;
 // Squares
-$follow-ball--square--background-color: $follow-ball--background;
+$follow-ball--square--background-color: #8bc34a;
 
 
 body,
@@ -12,6 +12,7 @@ section {
 }
 
 .informative {
+  display: none;
   right: 5%;
   top: 2.5%;
   position: fixed;
@@ -20,6 +21,10 @@ section {
   &__coordinate {
     margin: 15px 0 0;
     line-height: 1;
+  }
+
+  .debug & {
+    display: block;
   }
 }
 
@@ -45,10 +50,8 @@ section {
   height: 100vh;
   position: relative;
   width: 100vw;
-  --rotate-X: 0deg;
-  --rotate-Y: 0deg;
 
-  &--show-cartisian {
+  .debug & {
 
     &:before,
     &:after {
@@ -58,13 +61,15 @@ section {
     }
 
     &:before {
+      bottom: 0;
       width: 100%;
       height: 1px;
     }
 
     &:after {
-      width: 1px;
+      left: 0;
       height: 100%;
+      width: 1px;
     }
   }
 
@@ -79,17 +84,19 @@ section {
   }
 
   &__container {
-    perspective: 1000px;
+    perspective: 100000px;
     perspective-origin: center;
   }
 
   &__square {
     display: inline-block;
     background-color: $follow-ball--square--background-color;
+    color: $follow-ball--square--background-color;
     min-height: 100%;
     text-align: center;
     vertical-align: middle;
     transform: rotateY(var(--rotate-Y)) rotateX(var(--rotate-X));
+    transform-origin: center;
     width: 100%;
 
     &--no-follow {
