--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -14,3 +14,4 @@ html(lang="en" dir="ltr")
 			ul
 				li
 					a(href='./eyes-on-the-price.html', title='Eyes On The Price') Eyes On The Price
+					a(href='./scroll-alignment.html', title='Scroll Alignment') Scroll Aligment
