[Scroll Alignment] | Added Letter Timeline

--- a/src/templates/scroll-alignment.pug
+++ b/src/templates/scroll-alignment.pug
@@ -18,7 +18,7 @@ html(lang="en" dir="ltr")
       h1.word
         each character in word
           if character === 'ı'
-            span.word__character.word__character--wrapper
+            span.word__dot
               span.word__single= character
               span.word__ball
           else
