--- a/src/scss/scroll-alignment.scss
+++ b/src/scss/scroll-alignment.scss
@@ -1,10 +1,11 @@
 $sphere: 500px;
+$background: #181717;
 
 body {
   color: #fff;
   margin: 0;
   min-height: 500vh;
-  background-color: #181717;
+  background-color: $background;
   font-family: "Dynalight", cursive;
 
   &:before {
@@ -26,7 +27,7 @@ section {
 
 .intro {
   background-color: #ffffff;
-  height: 60vh;
+  height: 80vh;
   position: relative;
 }
 
@@ -35,8 +36,8 @@ section {
 }
 
 .pin-wrapper {
-  height: 300vh;
   position: fixed;
+  bottom: 40%;
   width: 100%;
 }
 
@@ -44,23 +45,33 @@ section {
   color: #ffffff;
   font-size: 20vw;
   letter-spacing: 2vw;
-  //opacity: 0;
   margin: 0;
   text-align: center;
+  position: relative;
   width: 100%;
+
+  &:before {
+    background-color: $background;
+    bottom: -100%;
+    content: "";
+    left: 0;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    z-index: 2;
+  }
 
   &__single,
   &__character {
     opacity: 0;
+    //transform: translate3d(0, 100%, 0);
   }
 
-  &__character {
+  &__character,
+  &__dot,
+  &__single {
     position: relative;
     display: inline-block;
-
-    &--wrapper {
-      opacity: 1;
-    }
   }
 
   &__ball {
@@ -72,5 +83,6 @@ section {
     position: absolute;
     top: 32%;
     width: 30px;
+    z-index: 4;
   }
 }
